--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -29,4 +29,5 @@ jobs:
       - name: Unit tests (PHPUnit)
         env:
           BRIDGE_CLIENT_ID: ${{ secrets.BRIDGE_CLIENT_ID }}
+          BRIDGE_CLIENT_SECRET: ${{ secrets.BRIDGE_CLIENT_SECRET }}
         run: echo "${{ steps.ip.outputs.ipv4 }}"; ./vendor/bin/phpunit .
