--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -30,4 +30,4 @@ jobs:
         env:
           BRIDGE_CLIENT_ID: ${{ secrets.BRIDGE_CLIENT_ID }}
           BRIDGE_CLIENT_SECRET: ${{ secrets.BRIDGE_CLIENT_SECRET }}
-        run: echo "${{ steps.ip.outputs.ipv4 }}"; ./vendor/bin/phpunit .
+        run: ./vendor/bin/phpunit .
