--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -26,7 +26,7 @@ parameters:
     # the use of this functions is intended.
     # @see https://phpstan.org/user-guide/ignoring-errors
     ignoreErrors:
-         - '#Property BridgeSDK\\Client::\$ch has unknown class CurlHandle as its type\.#'
+#         - '#Property BridgeSDK\\Client::\$ch has unknown class CurlHandle as its type\.#'
 #        - '#Should not use node with type "Expr_Exit", please change the code.#' # warnings for "die()"
 #        - '#Should not use node with type "Stmt_Echo", please change the code.#' # warnings for "echo()"
 #        - '#Should not use function "print_r", please change the code.#'         # warnings for "print_r()"
