--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Coding Standart
-on: [push, pull_request]
+on: [push]
 jobs:
     # Check there is no syntax errors in the project
     php-linter:
@@ -12,17 +12,17 @@ jobs:
             - name: PHP syntax checker 5.6
               uses: prestashop/github-action-php-lint/5.6@master
               with:
-                folder-to-exclude: "! -path \"./.php_cs.dist.php\" ! -path \"./tests/*\" ! -path \"./vendor/*\""
+                folder-to-exclude: "! -path \"./.php-cs-fixer.dist.php\" ! -path \"./tests/*\" ! -path \"./vendor/*\""
 
             - name: PHP syntax checker 7.4
               uses: prestashop/github-action-php-lint/7.4@master
               with:
-                folder-to-exclude: "! -path \"./.php_cs.dist.php\" ! -path \"./tests/*\"  ! -path \"./vendor/*\""
+                folder-to-exclude: "! -path \"./.php-cs-fixer.dist.php\" ! -path \"./tests/*\"  ! -path \"./vendor/*\""
 
             - name: PHP syntax checker 8.1
               uses: prestashop/github-action-php-lint/8.1@master
               with:
-                folder-to-exclude: "! -path \"./.php_cs.dist.php\" ! -path \"./tests/*\"  ! -path \"./vendor/*\""
+                folder-to-exclude: "! -path \"./.php-cs-fixer.dist.php\" ! -path \"./tests/*\"  ! -path \"./vendor/*\""
 
     # Check the PHP code follow the coding standards
     php-cs-fixer-and-phpstan:
