--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "name": "202ecommerce/bridge-sdk",
+  "version": "1.0.0",
   "description": "Bridge API SDK",
-  "homepage": "https://docs.bridgeapi.io/",
+  "homepage": "https://docs.bridgeapi.io/",  
   "license": "AFL-3.0",
   "authors": [
     {
@@ -29,14 +30,14 @@
     ]
   },
   "require": {
-    "psr/log": "^1.0",
-    "psr/http-message": "^1.0",
-    "psr/cache": "^1.0.0",
     "ext-json": "*",
     "ext-curl": "*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.4",
+    "psr/log": "^1.0",
+    "psr/http-message": "^1.0",
+    "psr/cache": "^1.0.0",
     "phpunit/phpunit": "^9.0",
     "phpstan/phpstan": "^0.12.81"
   },
